Updates from Overleaf

--- a/frontmatter/2-abstract.tex
+++ b/frontmatter/2-abstract.tex
@@ -23,4 +23,4 @@ double spacing throughout.
 
 \chapter*{ÖZET\\ \ttitletr}
 
-Bütün insanlar hür, haysiyet ve haklar bakımından eşit doğarlar. Akıl ve vicdana sahiptirler ve birbirlerine karşı kardeşlik zihniyeti ile hareket etmelidirler. Herkes, ırk, renk, cinsiyet, dil, din, siyasi veya diğer herhangi bir akide, milli veya içtimai menşe, servet, doğuş veya herhangi diğer bir fark gözetilmeksizin işbu Beyannamede ilan olunan tekmil haklardan ve bütün hürriyetlerden istifade edebilir. Bundan başka, bağımsız memleket uyruğu olsun, vesayet altında bulunan, gayri muhtar veya sair bir egemenlik kayıtlamasına tabi ülke uyruğu olsun, bir şahıs hakkında, uyruğu bulunduğu memleket veya ülkenin siyasi, hukuki veya milletlerarası statüsü bakımından hiçbir ayrılık gözetilmeyecektir. Yaşamak, hürriyet ve kişi emniyeti her ferdin hakkıdır. Hiç kimse kölelik veya kulluk altında bulundurulamaz; kölelik ve köle ticareti her türlü şekliyle yasaktır. Hiç kimse işkenceye, zalimane, gayriinsani, haysiyet kırıcı cezalara veya muamelelere tabi tutulamaz. Herkes her nerede olursa olsun hukuk kişiliğinin tanınması hakkını haizdir. Kanun önünde herkes eşittir ve farksız olarak kanunun eşit korumasından istifade hakkını haizdir. Herkesin işbu Beyannameye aykırı her türlü ayırdedici mualeleye karşı ve böyle bir ayırdedici muamele için yapılacak her türlü kışkırtmaya karşı eşit korunma hakkı vardır \citep{assembly1948universal}. 
+Bütün insanlar hür, haysiyet ve haklar bakımından eşit doğarlar. Akıl ve vicdana sahiptirler ve birbirlerine karşı kardeşlik zihniyeti ile hareket etmelidirler. Herkes, ırk, renk, cinsiyet, dil, din, siyasi veya diğer herhangi bir akide, milli veya içtimai menşe, servet, doğuş veya herhangi diğer bir fark gözetilmeksizin işbu Beyannamede ilan olunan tekmil haklardan ve bütün hürriyetlerden istifade edebilir. Bundan başka, bağımsız memleket uyruğu olsun, vesayet altında bulunan, gayri muhtar veya sair bir egemenlik kayıtlamasına tabi ülke uyruğu olsun, bir şahıs hakkında, uyruğu bulunduğu memleket veya ülkenin siyasi, hukuki veya milletlerarası statüsü bakımından hiçbir ayrılık gözetilmeyecektir. Yaşamak, hürriyet ve kişi emniyeti her ferdin hakkıdır. Hiç kimse kölelik veya kulluk altında bulundurulamaz; kölelik ve köle ticareti her türlü şekliyle yasaktır. Hiç kimse işkenceye, zalimane, gayriinsani, haysiyet kırıcı cezalara veya muamelelere tabi tutulamaz. Herkes her nerede olursa olsun hukuk kişiliğinin tanınması hakkını haizdir. Kanun önünde herkes eşittir ve farksız olarak kanunun eşit korumasından istifade hakkını haizdir. Herkesin işbu Beyannameye aykırı her türlü ayırdedici muameleye karşı ve böyle bir ayırdedici muamele için yapılacak her türlü kışkırtmaya karşı eşit korunma hakkı vardır \citep{assembly1948universal}. 
