--- a/loader.tex
+++ b/loader.tex
@@ -6,17 +6,22 @@
 
 \input{frontmatter/1-declarationoforiginality.tex}
 
+\newpage
+\pagenumbering{roman}
+\setcounter{page}{4}
+
 \input{frontmatter/2-abstract.tex}
 
+\input{frontmatter/3-acknowledgement}
 
+% moved renew commands for some ToC settings out of sty to here
 \renewcommand\contentsname{TABLE OF CONTENTS}
 \renewcommand\listfigurename{LIST OF FIGURES}
 \renewcommand\listtablename{LIST OF TABLES}
-
 \tableofcontents
 \begingroup
 \renewcommand{\addvspace}[1]{}
-\printglossary[title=\MakeUppercase{abbreviations}, style=block,nonumberlist]
+\printglossary[title=\MakeUppercase{abbreviations}, style=block, nonumberlist]
 \listoftables
 \listoffigures
 \endgroup
@@ -24,11 +29,9 @@
 
 
 % main body
+\pagenumbering{arabic} 
 
-\pagenumbering{arabic}
-
-% PUT YOUR CHAPTERS HERE USING INPUT COMMAND
-
+% YOUR CHAPTERS GO HERE
 \input{main-body/chapters/chapter1.tex}
 
 \input{main-body/chapters/chapter2.tex}
@@ -42,17 +45,23 @@
 \input{main-body/chapters/chapter6.tex}
 
 
+
 % endmatter
+\input{endmatter/appendicies/appendicies.tex}
 
-\appendix
-% changing chapter heading for Table of Content
-\titlecontents{chapter}[0pt]{}{\MakeUppercase{appendix \thecontentslabel:\quad}\MakeUppercase}{}{\dotfill\contentspage}
+\newpage
 
-
-% PUT YOUR APPENDICIES HERE USING INPUT COMMAND TO CALL TEX FILES IN APPENDICIES FOLDER
-\input{appendicies.tex}
-
-
+% for printing references
+\singlespacing
+\addcontentsline{toc}{chapter}{REFERENCES}
+\renewcommand\bibname{REFERENCES}
+\begingroup
+\raggedright
+\setlength\bibhang{0.5in}
+\bibliographystyle{spa_ma}
+\bibliography{references}
+\endgroup
+% \wordcount
 
 
 
