--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,20 @@
-\documentclass[12pt, a4paper, oneside, liststotoc, consistentlayout]{report}
-\usepackage{sbe_ma}
+\documentclass[12pt, a4paper, oneside]{report}
 
+% for drawing trees 
+\usepackage[linguistics, external]{forest}
+\forestset{sn edges/.style={for tree={parent anchor=south, child anchor=north, s sep=10mm, inner sep=0mm}}}
+ 
+\usepackage{tikz}
+\usepackage{tikz-qtree}
+\tikzset{every tree node/.style={align=center, anchor=north}}
+\usetikzlibrary{positioning}
 
+% externalizing figures, helps with compiling
+\usetikzlibrary{external}
+\tikzexternalize[prefix=tikzz/]
+
+% 
+\usepackage{sba_ma}
 
 \newcommand{\authname}{Name Surname} 
 \newcommand{\ttitle}{This is Only a Dummy Thesis Title, Not a Real One \\
@@ -25,12 +38,4 @@ Capitalize Your Own Title in the Same Way}
 
 \input{loader.tex}
 
-
-\newpage
-% for printing references
-\singlespacing
-\renewcommand\bibname{REFERENCES}
-\bibliographystyle{apa}
-\bibliography{references}
-\addcontentsline{toc}{chapter}{REFERENCES}
 \end{document}
