--- a/sbe_ma.sty
+++ b/sbe_ma.sty
@@ -1,5 +1,10 @@
 % font
 \usepackage{times}
+\usepackage[T1]{fontenc}
+
+% Turkish characters
+\usepackage[utf8]{inputenc}
+
 
 % margins
 \usepackage{geometry}
@@ -12,20 +17,12 @@
 \hyphenpenalty=10000
 \hbadness=10000
 
-% for spellcheck, disable for hyphenation.
-% \usepackage[english]{babel}
-
-% Turkish characters
-\usepackage[utf8x]{inputenc}
 
 % math symbols
 \usepackage{amsmath}
 
 % include graphics
 \usepackage{graphicx}
-
-% text positioning
-\usepackage[document]{ragged2e}
 
 % some float envrionments
 % \usepackage{nonfloat}
@@ -35,17 +32,8 @@
 
 % multiple columns
 \usepackage{multicol}
-
-% drawing Trees
-\usepackage{tikz}
-\usepackage{tikz-qtree}
-\tikzset{every tree node/.style={align=center, anchor=north}}
-\usetikzlibrary{positioning}
-
-% a different tree drawer
-\usepackage[linguistics]{forest}
-\forestset{sn edges/.style={for tree={
- parent anchor=south, child anchor=north, s sep=10mm, inner sep=0}}}
+%prevent empty space before multicols, if they are on page edges weird stuff can happen please check your multicol environments in the pdf.
+\setlength\multicolsep{0pt}
 
 % matrices
 \usepackage{avm}
@@ -61,8 +49,11 @@
 \usepackage{tipa}
 \usepackage{phonrule}
 
-% framing text
+% framing
 \usepackage{framed}
+
+% color
+\usepackage{color}
 
 % line spacing
 \usepackage{setspace}
@@ -71,12 +62,11 @@
 % \sout function and some others, without the option it messes up end-text citation
 \usepackage[normalem]{ulem}
 
+% sout in math mode
+\usepackage{cancel}
+
 % for footnotes in tables
 \usepackage{tablefootnote}
-
-% for figures and subfigures
-\usepackage{caption}
-\usepackage{subcaption}
 
 % for month and year info
 \usepackage{datetime}
@@ -97,16 +87,23 @@
 \titlespacing*{\subsubsection}{0pt}{2em}{0em}
 
 % makes subsubsection numbering visible in section heading.
-\setcounter{tocdepth}{3}
 \setcounter{secnumdepth}{3}
+
 
 % preamble pages
 \usepackage{titletoc}
 
-\titlecontents{chapter}[0pt]{}{\MakeUppercase{\chaptertitlename \space\space \thecontentslabel:\quad}\MakeUppercase}{}{\dotfill\contentspage}
-\titlecontents{section}[2.3em]{}{\thecontentslabel\quad}{}{\dotfill\contentspage}
-\titlecontents{figure}[0pt]{\hangindent1.5em}{\figurename \space\space \thecontentslabel.\quad}{}{\dotfill\contentspage}
-\titlecontents{table}[0pt]{\hangindent1.5em}{\tablename \space\space \thecontentslabel.\quad}{}{\dotfill\contentspage}
+\titlecontents{chapter}[0pt]{}{\MakeUppercase{\chaptertitlename\space\space\thecontentslabel:\space\space}\MakeUppercase}{}{\dotfill\contentspage}
+\titlecontents{section}[2.3em]{}{\thecontentslabel\space\space}{}{\dotfill\contentspage}
+
+\titlecontents{subsection}[4.6em]{}{\thecontentslabel\space\space}{}{\dotfill\contentspage}
+
+\titlecontents{figure}[0pt]{\hangindent 1.5em}{\figurename \space\space \thecontentslabel.\space\space}{}{\dotfill\contentspage}
+
+\titlecontents{table}[0pt]{\hangindent 1.5em}{\tablename \space\space \thecontentslabel.\space\space}{}{\dotfill\contentspage}
+
+
+% table of content depth 1 > CHAPTERs and Sections. 2 > + subsections
 \setcounter{tocdepth}{1}
 \usepackage{chngcntr}
 \counterwithout{figure}{chapter}
@@ -115,11 +112,89 @@
 % configure figure and table captions
 \usepackage[labelsep=period]{caption}
 \captionsetup{justification=raggedright,singlelinecheck=false}
+\usepackage{subcaption}
 
+%% R graphics and environment settings %%
+\usepackage{alltt}
+
+% knitr settings
+\definecolor{fgcolor}{rgb}{0.345, 0.345, 0.345}
+\newcommand{\hlnum}[1]{\textcolor[rgb]{0.686,0.059,0.569}{#1}}%
+\newcommand{\hlstr}[1]{\textcolor[rgb]{0.192,0.494,0.8}{#1}}%
+\newcommand{\hlcom}[1]{\textcolor[rgb]{0.678,0.584,0.686}{\textit{#1}}}%
+\newcommand{\hlopt}[1]{\textcolor[rgb]{0,0,0}{#1}}%
+\newcommand{\hlstd}[1]{\textcolor[rgb]{0.345,0.345,0.345}{#1}}%
+\newcommand{\hlkwa}[1]{\textcolor[rgb]{0.161,0.373,0.58}{\textbf{#1}}}%
+\newcommand{\hlkwb}[1]{\textcolor[rgb]{0.69,0.353,0.396}{#1}}%
+\newcommand{\hlkwc}[1]{\textcolor[rgb]{0.333,0.667,0.333}{#1}}%
+\newcommand{\hlkwd}[1]{\textcolor[rgb]{0.737,0.353,0.396}{\textbf{#1}}}%
+\let\hlipl\hlkwb
+
+\makeatletter
+\newenvironment{kframe}{%
+ \def\at@end@of@kframe{}%
+ \ifinner\ifhmode%
+  \def\at@end@of@kframe{\end{minipage}}%
+  \begin{minipage}{\columnwidth}%
+ \fi\fi%
+ \def\FrameCommand##1{\hskip\@totalleftmargin \hskip-\fboxsep
+ \colorbox{shadecolor}{##1}\hskip-\fboxsep
+     % There is no \\@totalrightmargin, so:
+     \hskip-\linewidth \hskip-\@totalleftmargin \hskip\columnwidth}%
+ \MakeFramed {\advance\hsize-\width
+   \@totalleftmargin\z@ \linewidth\hsize
+   \@setminipage}}%
+ {\par\unskip\endMakeFramed%
+ \at@end@of@kframe}
+\makeatother
+
+\definecolor{shadecolor}{rgb}{.97, .97, .97}
+\definecolor{messagecolor}{rgb}{0, 0, 0}
+\definecolor{warningcolor}{rgb}{1, 0, 1}
+\definecolor{errorcolor}{rgb}{1, 0, 0}
+\newenvironment{knitrout}{}{}
+%% end R environment %%
+
+% for word count
+% \usepackage{verbatim}
+% \immediate\write18{texcount -inc -incbib 
+% -sum main.tex > /tmp/wordcount.tex}
+% \newcommand\wordcount{
+% \verbatiminput{/tmp/wordcount.tex}}
+
+
+% hinder widows and orphans
+\usepackage[all]{nowidow}
+
+% misc
+\usepackage{etoolbox}
+
+\newlength\mystoreparindent
+\newenvironment{myparindent}[1]{%
+\setlength{\mystoreparindent}{\the\parindent}
+\setlength{\parindent}{#1}
+}{%
+\setlength{\parindent}{\mystoreparindent}
+}
+
+% text positioning
+\usepackage[document]{ragged2e}
+\setlength\RaggedRightParindent{1.27cm}
 
 %%% KEEP THESE PACKAGES AT THE VERY END OF YOUR STY FILE IF YOU WANT TO HAVE ADDITIONAL PACKAGES %%%
 % citation
+
 \usepackage{natbib}
+
+%% this piece fixes semicolon comma choices for cite, citet, and citep %%
+\makeatletter
+\newcommand\bibstyle@comma{\bibpunct(),a,,}
+\newcommand\bibstyle@semicolon{\bibpunct();a,,}
+\makeatother
+\pretocmd\cite{\citestyle{comma}}\relax\relax
+\pretocmd\citet{\citestyle{comma}}\relax\relax
+\pretocmd\citep{\citestyle{semicolon}}\relax\relax
+%%end fix%%
 
 
 % leipzig glossing
@@ -128,9 +203,9 @@
 \input{frontmatter/glossaries.tex}
 
 % numbered linguistics examples with glossing
-\usepackage{gb4e}
+\usepackage{langsci-gb4e}
 
 % makes language examples appear in italic
-\renewcommand{\eachwordone}{\textit}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\let\eachwordone=\itshape
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
