--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 \tikzexternalize[prefix=tikzz/]
 
 % 
-\usepackage{sba_ma}
+\usepackage{sbe_ma}
 
 \newcommand{\authname}{Name Surname} 
 \newcommand{\ttitle}{This is Only a Dummy Thesis Title, Not a Real One \\
